--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget10/base-tables-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget10/base-tables-widget10.component.html
@@ -3,8 +3,9 @@
 <form [formGroup]="selectCorporate">
   <form [formGroup]="statementListForm">
     <div class="row">
-      <label for="example-text-input" class="col-auto col-form-label">
-        Select Customers
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <label for="example-text-input" class="col-auto col-form-label"><b>
+        Select Customers</b>
       </label>
       <div class="col-md-2">
         <select class="form-control" formControlName="selectCorporateMapId">
@@ -15,7 +16,7 @@
         </select>
       </div>
 
-      <label for="example-text-input" class="col-auto col-form-label">Date Range
+      <label for="example-text-input" class="col-auto col-form-label"><b>Date Range</b>
       </label>
 
       <div class="col-md-2">
@@ -48,6 +49,7 @@
   </form>
   <br>
   <div class="row">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label for="example-text-input" class="col-auto col-form-label">
       <b> VPFCINV</b>
     </label>
