--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget11/base-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget11/base-tables-widget11.component.html
@@ -58,7 +58,7 @@
     body {
       margin: 0;
       padding: 0;
-      -webkit-print-color-adjust: exact;
+      /* -webkit-print-color-adjust: exact; */
     }
     .A4 {
       box-shadow: none;
