--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
@@ -471,7 +471,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Khata :</label>
+          <label class="labelNewMargin"><b>Khata :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control"
@@ -483,7 +483,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Person Name :</label>
+          <label class="labelNewMargin"><b>Person Name :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control"
@@ -495,7 +495,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Email Id :</label>
+          <label class="labelNewMargin"><b>Email Id :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" [(ngModel)]="updateMail" [ngModelOptions]="{standalone: true}">
@@ -505,7 +505,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">GST Number :</label>
+          <label class="labelNewMargin"><b>GST Number :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" max="15"
@@ -517,7 +517,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Cr Amount Limit :</label>
+          <label class="labelNewMargin"><b>Cr Amount Limit :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" type="number" [(ngModel)]="updateMaxCRLimit"
@@ -528,7 +528,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Cr Days Limit :</label>
+          <label class="labelNewMargin"><b>Cr Days Limit :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" type="number" [(ngModel)]="creditDayLimit" [ngModelOptions]="{standalone: true}">
@@ -537,7 +537,7 @@
       <br>
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Address Line1 :</label>
+          <label class="labelNewMargin"><b>Address Line1 :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" [(ngModel)]="mappingAddress1"
@@ -549,7 +549,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">Address Line2 :</label>
+          <label class="labelNewMargin"><b>Address Line2 :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" max="15"
@@ -561,7 +561,7 @@
 
       <div class="row">
         <div class="col-md-6">
-          <label class="labelNewMargin">City :</label>
+          <label class="labelNewMargin"><b>City :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" max="15"
@@ -671,7 +671,7 @@
 
       <div class="row">
         <div class="col-auto">
-          <label class="labelNewMargin"> Remarks :</label>
+          <label class="labelNewMargin"><b> Remarks :</b></label>
         </div>
         <div class="col-md-6">
           <input class="form-control" style="margin-top: 10px"
@@ -744,9 +744,9 @@
               <table class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th>Sr No</th>
-                    <th>Vehicle Number</th>
-                    <th>Action</th>
+                    <th><b>Sr No</b></th>
+                    <th><b>Vehicle Number</b></th>
+                    <th><b>Action</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let charges of addVehicleData; let i = index;">
