--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget12/base-tables-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget12/base-tables-widget12.component.html
@@ -1,7 +1,9 @@
+<br>
 <form [formGroup]="searchDiscountForm">
   <div class="row">
-    <label for="example-text-input" class="col-auto col-form-label">
-      Credit Days
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="example-text-input" class="col-auto col-form-label"><b>
+        Credit Days</b>
     </label>
     <div class="col-md-1">
       <select class="form-control" formControlName="crDaysLimit" (change)="getDiffDayByCrDays()">
@@ -12,7 +14,7 @@
       </select>
     </div>
 
-    <label for="example-text-input" class="col-auto col-form-label">Date Range
+    <label for="example-text-input" class="col-auto col-form-label"><b>Date Range</b>
     </label>
     <div class="col-md-2">
       <input class="form-control" placeholder="DD-MM-YYYY" name="startDateCrDays" (click)="startDateCrDays.toggle()"
@@ -25,8 +27,8 @@
         #endDateCrDays="ngbDatepicker" />
     </div>
 
-    <label for="example-text-input" class="col-auto col-form-label">
-      Type
+    <label for="example-text-input" class="col-auto col-form-label"><b>
+        Type</b>
     </label>
     <div class="col-md-1">
       <select class="form-control" formControlName="setInvoiceTypeCrDays" (change)="getDetailsByCrDaysLimit()">
@@ -55,34 +57,34 @@
     <table class="table table-hover table-striped">
       <thead>
         <tr>
-          <th style="text-align: left;">Sr No</th>
-          <th style="text-align: left;">Customer Name</th>
-          <th style="text-align: left;">Customer Mobile</th>
-          <th style="text-align: left;">Credit Sales</th>
-          <th style="text-align: left;">Credit Sale Amount</th>
-          <th style="text-align: left;">Credit Payments</th>
-          <th style="text-align: left;">Credit Payment Amount</th>
+          <th style="text-align: center;"><b>Sr No</b></th>
+          <th style="text-align: center;"><b>Customer Name</b></th>
+          <th style="text-align: center;"><b>Customer Mobile</b></th>
+          <th style="text-align: center;"><b>Credit Sales</b></th>
+          <th style="text-align: center;"><b>Credit Sale Amount</b></th>
+          <th style="text-align: center;"><b>Credit Payments</b></th>
+          <th style="text-align: center;"><b>Credit Payment Amount</b></th>
         </tr>
       </thead>
       <tbody
         *ngFor="let data of customerDetails | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
         <tr>
           <td style="text-align: center;"> {{i+1}} </td>
-          <td style="text-align: left;"> {{data.companyName}} </td>
-          <td style="text-align: left;"> {{data.hostPhone}} </td>
-          <td style="text-align: left;"> {{data.totalSales}} </td>
-          <td style="text-align: left;"> {{data.totalSaleAmount}} </td>
-          <td style="text-align: left;"> {{data.totalPayments}} </td>
-          <td style="text-align: left;"> {{data.totalPaymentAmount}} </td>
+          <td style="text-align: center;"> {{data.companyName}} </td>
+          <td style="text-align: center;"> {{data.hostPhone}} </td>
+          <td style="text-align: center;"> {{data.totalSales}} </td>
+          <td style="text-align: center;"> {{data.totalSaleAmount}} </td>
+          <td style="text-align: center;"> {{data.totalPayments}} </td>
+          <td style="text-align: center;"> {{data.totalPaymentAmount}} </td>
         </tr>
       </tbody>
 
     </table>
-   
-          <!-- begin::Pagination -->
-          <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
-            style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
-          </pagination-controls>
-          <!-- end::Pagination -->
+
+    <!-- begin::Pagination -->
+    <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel="" nextLabel=""
+      style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
+    </pagination-controls>
+    <!-- end::Pagination -->
   </div>
 </div>
