--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget4/base-tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget4/base-tables-widget4.component.html
@@ -1,7 +1,8 @@
 <br>
 <form [formGroup]="filterForm">
   <div class="mb-3 row">
-    <label for="example-text-input" class="col-auto col-form-label">Khata</label>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <label for="example-text-input" class="col-auto col-form-label"><b>Khata</b></label>
     <div class="col-md-3">
       <input class="form-control" type="text" list="allCorporateList" placeholder="all khata"
         formControlName="customerName" (change)="getDetailsByCustomerMapName($event)">
@@ -10,7 +11,7 @@
       </datalist>
     </div>
 
-    <label for="example-text-input" class="col-auto col-form-label">Month</label>
+    <label for="example-text-input" class="col-auto col-form-label"><b>Month</b></label>
     <div class="col-md-2">
       <select class="form-control" formControlName="monthDAY" required>
         <option value=""> Select Month </option>
