--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="col-md-4">
-          <input class="form-control" type="text" list="corporateList" placeholder="select customer"
+          <input class="form-control" type="text" list="corporateList" placeholder="Select Customer"
             formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
           <datalist id="corporateList">
             <option *ngFor="let data of corporateList" [value]="data.companyName">
@@ -78,25 +78,25 @@
             <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
               <thead>
                 <tr>
-                  <th style="text-align: left;border-width: 1px; border-color: #000;">Khata Name</th>
-                  <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Name</th>
-                  <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Mobile</th>
-                  <th style="text-align: left;border-width: 1px; border-color: #000;">Bill Nos. Set</th>
-                  <th style="text-align: left;border-width: 1px; border-color: #000;">GST</th>
-                  <th style="text-align: left;border-width: 1px; border-color: #000;">Alert</th>
+                  <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Khata Name</b></th>
+                  <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Name</b></th>
+                  <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Mobile</b></th>
+                  <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Bill Nos. Set</b></th>
+                  <th style="text-align: center;border-width: 1px; border-color: #000;"><b>GST</b></th>
+                  <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Alert</b></th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td style="text-align: left; border: 1px solid black;">{{dealerName}}</td>
-                  <td style="text-align: left; border: 1px solid black;">
+                  <td style="text-align: center; border: 1px solid black;">{{dealerName}}</td>
+                  <td style="text-align: center; border: 1px solid black;">
                     {{personName}}
                   </td>
-                  <td style="text-align: left; border: 1px solid black;"> {{personPhone1}} </td>
-                  <td style="text-align: left; border: 1px solid black;">
+                  <td style="text-align: center; border: 1px solid black;"> {{personPhone1}} </td>
+                  <td style="text-align: center; border: 1px solid black;">
                     {{rangeFrom}} - {{rangeTo}}
                   </td>
-                  <td style="text-align: left; border: 1px solid black;">
+                  <td style="text-align: center; border: 1px solid black;">
                     <span *ngIf=" gstNumber != 'undefined'">
                       <b *ngIf="gstNumber !='' ">{{gstNumber}}</b></span>
                     <!-- <span *ngIf="fuelStaffAccess.outstanding == 'TRUE'">
@@ -105,7 +105,7 @@
                     </span> -->
                   </td>
 
-                  <td style="text-align: left; border: 1px solid black;">
+                  <td style="text-align: center; border: 1px solid black;">
                     <span *ngIf="viewCorpFlag.length" class="col-md-1" (click)="viewFlag(viewFlagModel)"
                       style="color:red;cursor:pointer;font-size: x-large;">
                       <i class="fas fa-exclamation-triangle" aria-hidden="true"></i>
@@ -166,14 +166,14 @@
           <table class="table table-hover table-striped">
             <tbody *ngFor="let charges of CreditRequestDataLubeTax; let i = index;">
               <tr>
-                <th align=left>Lubricant Name</th>
-                <th align=left>Tax</th>
-                <th align=left>taxDetails</th>
-                <th align=left>Bill / Ref Number</th>
-                <th align=left>Vehicle No./ Barrel</th>
-                <th align=left>Credit Amount</th>
-                <th align=left>Quantity In Pieces</th>
-                <th align=left>Credit Quantity</th>
+                <th align=left><b>Lubricant Name</b></th>
+                <th align=left><b>Tax</b></th>
+                <th align=left><b>taxDetails</b></th>
+                <th align=left><b>Bill / Ref Number</b></th>
+                <th align=left><b>Vehicle No./ Barrel</b></th>
+                <th align=left><b>Credit Amount</b></th>
+                <th align=left><b>Quantity In Pieces</b></th>
+                <th align=left><b>Credit Quantity</b></th>
               </tr>
               <tr>
                 <td>
@@ -236,12 +236,12 @@
               </tr>
 
               <tr>
-                <th align=left>HSN/SAC Number</th>
-                <th align=left>Tax</th>
-                <th align=left>Basic Amount</th>
-                <th align=left>Actual Amount</th>
-                <th align=left>Units</th>
-                <th align=left>Action</th>
+                <th align=left><b>HSN/SAC Number</b></th>
+                <th align=left><b>Tax</b></th>
+                <th align=left><b>Basic Amount</b></th>
+                <th align=left><b>Actual Amount</b></th>
+                <th align=left><b>Units</b></th>
+                <th align=left><b>Action</b></th>
 
               </tr>
               <tr>
