--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
@@ -1,100 +1,3 @@
-<style>
-  table {
-    /* //border: 1px solid black; */
-    width: 100%;
-    text-align: center;
-
-    th {
-      border: 1px solid black;
-    }
-
-    tr td {
-      border: 1px solid black;
-    }
-  }
-
-  th {
-    border: 1px solid black;
-  }
-
-  tr td {
-    border: 1px solid black;
-  }
-
-  #watermark {
-    position: absolute;
-    bottom: 105px;
-    opacity: 0.2;
-    font-size: 120px;
-    text-align: center;
-    color: red;
-    text-shadow: 10px 2px black;
-    -webkit-transform: rotate(-30deg);
-  }
-
-  #watermark1 {
-    position: absolute;
-    bottom: 170px;
-    opacity: 0.2;
-    font-size: 120px;
-    text-align: center;
-    color: red;
-    text-shadow: 10px 2px black;
-    -webkit-transform: rotate(-42deg);
-  }
-
-  h1,
-  .h1 {
-    font-size: 4.125rem;
-  }
-
-  .logo {
-    width: 30%;
-  }
-
-  .A4 {
-    background: white;
-    width: 23cm;
-    height: 40.7cm;
-    display: block;
-    margin: 0 auto;
-    padding: 1px 1px;
-    margin-bottom: 0.5cm;
-    box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
-
-    box-sizing: border-box;
-    font-size: 12pt;
-    /* //line-height:normal; */
-  }
-
-  @media print {
-    .page-break {
-      display: block;
-      page-break-before: always;
-    
-    size: A4 portrait;}
-  }
-  
-  @media print {
-    body {
-      margin: 0;
-      padding: 0;
-      -webkit-print-color-adjust: exact;
-    }
-    .A4 {
-      box-shadow: none;
-      margin: 0;
-      width: auto;
-      height: auto;
-    }
-    .noprint {
-      display: none;
-    }
-    .print {
-      display: block;
-    }
-  }
-</style>
 
 
 <!DOCTYPE html
@@ -111,7 +14,104 @@
   <!--<link rel='stylesheet' type='text/css' href='../../../../../../assets/EditableInvoice/css/print1.css' media="print" />-->
   <!-- <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/jquery-1.3.2.min1.js'></script> -->
   <!-- <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/example1.js'></script > -->
-
+    <style>
+      table {
+        /* //border: 1px solid black; */
+        width: 100%;
+        text-align: center;
+    
+        th {
+          border: 1px solid black;
+        }
+    
+        tr td {
+          border: 1px solid black;
+        }
+      }
+    
+      th {
+        border: 1px solid black;
+      }
+    
+      tr td {
+        border: 1px solid black;
+      }
+    
+      #watermark {
+        position: absolute;
+        bottom: 105px;
+        opacity: 0.2;
+        font-size: 120px;
+        text-align: center;
+        color: red;
+        text-shadow: 10px 2px black;
+        /* -webkit-transform: rotate(-30deg); */
+      }
+    
+      #watermark1 {
+        position: absolute;
+        bottom: 170px;
+        opacity: 0.2;
+        font-size: 120px;
+        text-align: center;
+        color: red;
+        text-shadow: 10px 2px black;
+        /* -webkit-transform: rotate(-42deg); */
+      }
+    
+      h1,
+      .h1 {
+        font-size: 4.125rem;
+      }
+    
+      .logo {
+        width: 30%;
+      }
+    
+      .A4 {
+        background: white;
+        width: 23cm;
+        height: 40.7cm;
+        display: block;
+        margin: 0 auto;
+        padding: 1px 1px;
+        margin-bottom: 0.5cm;
+        box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+    
+        box-sizing: border-box;
+        font-size: 12pt;
+        /* //line-height:normal; */
+      }
+    
+      @media print {
+        .page-break {
+          display: block;
+          page-break-before: always;
+        
+        size: A4 portrait;}
+      }
+      
+      @media print {
+        body {
+          margin: 0;
+          padding: 0;
+          /* -webkit-print-color-adjust: exact; */
+        }
+        .A4 {
+          box-shadow: none;
+          margin: 0;
+          width: auto;
+          height: auto;
+        }
+        .noprint {
+          display: none;
+        }
+        .print {
+          display: block;
+        }
+      }
+    </style>
+    
 </head>
 
 <!-- <body id="contentToConvert" > -->
