--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget2/mixed-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget2/mixed-widget2.component.html
@@ -5,10 +5,11 @@
     <div class="col-lg-12">
       <form [formGroup]="requestTransporterLube">
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col-lg-2">
-            <label for="example-text-input" class="col-form-label">Date</label>
+            <label for="example-text-input" class="col-form-label"><b>Date</b></label>
           </div>
-          <div class="col-md-10">
+          <div class="col-md-8">
             <input class="form-control" placeholder="DD-MM-YYYY" name="startDate" (click)="endDate.toggle()" readonly
               style="background-color: #ffffff;" #myinput formControlName="estimatedRefuelDate" ngbDatepicker
               #endDate="ngbDatepicker">
@@ -16,10 +17,11 @@
         </div>
         <br>
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col-lg-2">
-            <label for="example-text-input" class="col-form-label">Product</label>
+            <label for="example-text-input" class="col-form-label"><b>Product</b></label>
           </div>
-          <div class="col-lg-10">
+          <div class="col-lg-8">
             <label for="example-text-input" class="col-form-label">Lubricants</label>
           </div>
         </div>
@@ -59,11 +61,12 @@
         <br>
         <form [formGroup]="requestTransporter1">
           <div class="row">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div class="col-lg-2">
-              <label for="example-text-input" class="col-form-label">Khata</label>
+              <label for="example-text-input" class="col-form-label"><b>Khata</b></label>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-md-8">
               <input class="form-control" type="text" list="corporateList" placeholder="Select Khata"
                 formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
               <datalist id="corporateList">
@@ -74,6 +77,7 @@
           <br>
 
           <div class="row">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div class="col-lg-12">
               <ng-template #content let-c="close" let-d="dismiss">
                 <div class="modal-header">
@@ -124,28 +128,29 @@
                     </div>
                   </div>
                 </div>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                   <thead>
                     <tr>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Khata Name</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Name</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Mobile</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Bill Nos. Set</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Outstanding</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Alert</th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Khata Name</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Name</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Mobile</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Bill Nos. Set</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Outstanding</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Alert</b></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td style="text-align: left;border: 1px solid black;">{{dealerName}}</td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;">{{dealerName}}</td>
+                      <td style="text-align: center;border: 1px solid black;">
                         {{personName}}
                       </td>
-                      <td style="text-align: left;border: 1px solid black;"> {{personPhone1}} </td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;"> {{personPhone1}} </td>
+                      <td style="text-align: center;border: 1px solid black;">
                         {{rangeFrom}} - {{rangeTo}}
                       </td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;">
                         <span *ngIf="calOutstanding< 0">
                           <li class="fas fa-rupee-sign"></li> {{(calOutstanding)*(-1) | number:'1.2-2'}} CR
                         </span>
@@ -153,7 +158,7 @@
                           <li class="fas fa-rupee-sign"></li>{{(calOutstanding) | number:'1.2-2'}}
                         </span>
                       </td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;">
                         <span *ngIf="viewCorpFlag.length" class="col-md-1" (click)="viewFlag(viewFlagModel)"
                           style="color:red;cursor:pointer;font-size: x-large;">
                           <i class="fa fa-exclamation-triangle fa-fw fa-3x" style="color: red"></i>
@@ -171,17 +176,18 @@
         </form>
 
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col col-xl-12 col-lg-12">
             <div class="card-body table-responsive">
               <table class="table table-hover table-striped">
                 <thead>
                   <tr>
-                    <th>Lubricant Name</th>
-                    <th> Bill Number </th>
-                    <th>Details (Vehicle/Barrel)</th>
-                    <th>Amount</th>
-                    <th>Quantity</th>
-                    <th>Units</th>
+                    <th><b>Lubricant Name</b></th>
+                    <th><b> Bill Number </b></th>
+                    <th><b>Details (Vehicle/Barrel)</b></th>
+                    <th><b>Amount</b></th>
+                    <th><b>Quantity</b></th>
+                    <th><b>Units</b></th>
                     <th></th>
                   </tr>
                 </thead>
@@ -249,7 +255,8 @@
       </form>
 
       <div class="row">
-        <div class="col-md-4">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="col-auto">
           &nbsp;
           <button type="submit" class="btn btn-primary" (click)="submitByDealerForLube()">Submit</button>
           &nbsp;&nbsp;
@@ -273,6 +280,7 @@
           </button>
         </div>
       </ng-template>
+      <br><br>
     </div>
   </div>
 </div>
