--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
@@ -6,10 +6,11 @@
 
       <form [formGroup]="requestTransporterAdvance">
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col-lg-2">
-            <label for="example-text-input" class="col-form-label">Date</label>
+            <label for="example-text-input" class="col-form-label"><b>Date</b></label>
           </div>
-          <div class="col-lg-10">
+          <div class="col-lg-8">
             <input class="form-control" placeholder="DD-MM-YYYY" name="startDate" (click)="endDate.toggle()" readonly
               style="background-color: #ffffff;" #myinput formControlName="estimatedRefuelDate" ngbDatepicker
               #endDate="ngbDatepicker">
@@ -18,10 +19,11 @@
         <br>
 
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col-lg-2">
-            <label for="example-text-input" class="col-form-label">Product</label>
+            <label for="example-text-input" class="col-form-label"><b>Product</b></label>
           </div>
-          <div class="col-md-10">
+          <div class="col-md-8">
             <label for="example-text-input" class="col-form-label">Advance</label>
           </div>
 
@@ -29,10 +31,11 @@
         <br>
         <form [formGroup]="requestTransporter1">
           <div class="row">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div class="col-lg-2">
-              <label for="example-text-input" class="col-form-label">Khata</label>
+              <label for="example-text-input" class="col-form-label"><b>Khata</b></label>
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-8">
               <input class="form-control" type="text" list="corporateList" placeholder="Select Khata"
                 formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
               <datalist id="corporateList">
@@ -176,28 +179,29 @@
                     </div>
                   </div>
                 </div>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                   <thead style="border-width: 1px; border-color: #000;">
                     <tr>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Khata Name</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Name</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Mobile</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Bill Nos. Set</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Outstanding</th>
-                      <th style="text-align: left;border-width: 1px; border-color: #000;">Alert</th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Khata Name</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Name</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Mobile</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Bill Nos. Set</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Outstanding</b></th>
+                      <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Alert</b></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td style="text-align: left;border: 1px solid black;">{{dealerName}}</td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;">{{dealerName}}</td>
+                      <td style="text-align: center;border: 1px solid black;">
                         {{personName}}
                       </td>
-                      <td style="text-align: left;border: 1px solid black;"> {{personPhone1}} </td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;"> {{personPhone1}} </td>
+                      <td style="text-align: center;border: 1px solid black;">
                         {{rangeFrom}} - {{rangeTo}}
                       </td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;">
                         <span *ngIf="calOutstanding< 0">
                           <li class="fas fa-rupee-sign"></li> {{(calOutstanding)*(-1) | number:'1.2-2'}} CR
                         </span>
@@ -206,7 +210,7 @@
                         </span>
 
                       </td>
-                      <td style="text-align: left;border: 1px solid black;">
+                      <td style="text-align: center;border: 1px solid black;">
                         <span *ngIf="viewCorpFlag.length" class="col-md-1" (click)="viewFlag(viewFlagModel)"
                           style="color:red;cursor:pointer;font-size: x-large;">
                           <i class="fa fa-exclamation-triangle fa-fw fa-3x"></i>
@@ -226,15 +230,16 @@
         </form>
 
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col col-xl-12 col-lg-12">
             <div class="card-body table-responsive">
               <table class="table table-hover table-striped">
                 <thead>
                   <tr>
-                    <th>Bill Number</th>
-                    <th>Details (Vehicle/Barrel/Person)</th>
-                    <th>Person Mobile</th>
-                    <th>Amount</th>
+                    <th><b>Bill Number</b></th>
+                    <th><b>Details (Vehicle/Barrel/Person)</b></th>
+                    <th><b>Person Mobile</b></th>
+                    <th><b>Amount</b></th>
                     <th></th>
                   </tr>
                 </thead>
@@ -336,7 +341,8 @@
         </ng-template>
         
         <div class="row">
-          <div class="col-md-4">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <div class="col-auto">
               <button type="submit" class="btn btn-primary"
                   (click)="submitByDealerForAdvance()">Submit</button>
 
@@ -347,6 +353,7 @@
           <div class="col-md-2">
           </div>
       </div>
+      <br><br>
       </form>
 
     </div>
