--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget16/stats-widget16.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget16/stats-widget16.component.html
@@ -4,10 +4,11 @@
   <div class="col-lg-12">
     <form [formGroup]="requestTransporter">
       <div class="row">
-        <div class="col-lg-2">
-          <label for="example-text-input" class="col-form-label">Date</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="col-md-2">
+          <label for="example-text-input" class="col-form-label"><b>Date</b></label>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-8">
           <input class="form-control" placeholder="DD-MM-YYYY" name="startDate" (click)="endDate.toggle()" readonly
             style="background-color: #ffffff;" formControlName="priceDate" ngbDatepicker #endDate="ngbDatepicker"
             (dateSelect)="logValue()">
@@ -16,10 +17,11 @@
       <br>
 
       <div class="row">
-        <div class="col-lg-2">
-          <label for="example-text-input" class="col-form-label">Product</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="col-md-2">
+          <label for="example-text-input" class="col-form-label"><b>Product</b></label>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-8">
           <select class="form-control" formControlName="productName" (change)="getPrice($event,setFuelPrice)" required>
             <option value="">Select Product </option>
             <option *ngFor="let data of productInfo" [value]="data.fuelProductsId">
@@ -31,10 +33,11 @@
       <br>
 
       <div class="row">
-        <div class="col-lg-2">
-          <label for="example-text-input" class="col-form-label">Rate</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="col-md-2">
+          <label for="example-text-input" class="col-form-label"><b>Rate</b></label>
         </div>
-        <div class="col-lg-10">
+        <div class="col-md-8">
           <select class="form-control" formControlName="productPrice" (change)="setPrice($event)" required>
             <option value="">Select </option>
             <option *ngFor="let data of productPriceDetails" [value]="data.productSellingPrice">
@@ -96,11 +99,12 @@
     <br>
     <form [formGroup]="requestTransporter1">
       <div class="row">
-        <div class="col-lg-2">
-          <label for="example-text-input" class="col-form-label">Khata</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="col-md-2">
+          <label for="example-text-input" class="col-form-label"><b>Khata</b></label>
         </div>
 
-        <div class="col-lg-10">
+        <div class="col-md-8">
           <input class="form-control" type="text" list="corporateList" #myinput placeholder="Select Khata"
             formControlName="selectedCorp" (change)="getDetailsByfuelDealerCustomerMapIdId($event)">
           <datalist id="corporateList">
@@ -242,29 +246,30 @@
               </div>
             </div>
           </div>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
             <thead>
               <tr>
-                <th style="text-align: left;border-width: 1px; border-color: #000;">Khata Name</th>
-                <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Name</th>
-                <th style="text-align: left;border-width: 1px; border-color: #000;">Key Person Mobile</th>
-                <th style="text-align: left;border-width: 1px; border-color: #000;">Bill Nos. Set</th>
-                <th style="text-align: left;border-width: 1px; border-color: #000;">Outstanding</th>
-                <th style="text-align: left;border-width: 1px; border-color: #000;">Alert</th>
+                <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Khata Name</b></th>
+                <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Name</b></th>
+                <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Key Person Mobile</b></th>
+                <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Bill Nos. Set</b></th>
+                <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Outstanding</b></th>
+                <th style="text-align: center;border-width: 1px; border-color: #000;"><b>Alert</b></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td style="text-align: left;border: 1px solid black;">{{dealerName}}</td>
-                <td style="text-align: left;border: solid 1px black;border-bottom: solid 1px black;">
+                <td style="text-align: center;border: 1px solid black;">{{dealerName}}</td>
+                <td style="text-align: center;border: solid 1px black;border-bottom: solid 1px black;">
                   {{personName}}
                 </td>
-                <td style="text-align: left;border: solid 1px black;border-bottom: solid 1px black;"> {{personPhone1}}
+                <td style="text-align: center;border: solid 1px black;border-bottom: solid 1px black;"> {{personPhone1}}
                 </td>
-                <td style="text-align: left;border-width: 1px; border-color: #000;border-bottom: solid 1px black;">
+                <td style="text-align: center;border-width: 1px; border-color: #000;border-bottom: solid 1px black;">
                   {{rangeFrom}} - {{rangeTo}}
                 </td>
-                <td style="text-align: left;border: solid 1px black;color: red;border-bottom: solid 1px black;">
+                <td style="text-align: center;border: solid 1px black;color: red;border-bottom: solid 1px black;">
                   <span *ngIf="calOutstanding< 0">
                     <li class="fas fa-rupee-sign"></li> {{(calOutstanding)*(-1) | number:'1.2-2'}} CR
                   </span>
@@ -295,16 +300,17 @@
 
     <form [formGroup]="requestTransporter">
       <div class="row">
-        <div class="col-lg-2">
-          <label for="example-text-input" class="col-form-label">Type</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="col-md-2">
+          <label for="example-text-input" class="col-form-label"><b>Type</b></label>
         </div>
 
-        <div class="col-md-10">
+        <div class="col-md-8">
           <input type="radio" value="showamount" checked name="requestType" formControlName="requestType"
             (change)="changeAmountToQuantity($event)">
           &nbsp; <label class="labelNewMargin">Amount</label>
 
-          &nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <input type="radio" value="!showamount" name="requestType" formControlName="requestType"
             (change)="changeQuantityToAmount($event)">
           &nbsp; <label class="labelNewMargin">Quantity</label>
@@ -313,18 +319,19 @@
     </form>
 
     <div class="row">
-      <div class="col-md-12">
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div class="col-md-10">
         <form [formGroup]="requestTransporter">
           <div class="card-body table-responsive">
             <table class="table table-hover table-striped">
               <thead>
                 <tr>
-                  <th>Bill Number</th>
-                  <th>Details (Vehicle/Barrel)</th>
-                  <th *ngIf="!showamount">Amount</th>
-                  <th *ngIf="!showamount">Quantity</th>
-                  <th *ngIf="showamount">Quantity</th>
-                  <th *ngIf="showamount">Amount</th>
+                  <th><b>Bill Number</b></th>
+                  <th><b>Details (Vehicle/Barrel)</b></th>
+                  <th *ngIf="!showamount"><b>Amount</b></th>
+                  <th *ngIf="!showamount"><b>Quantity</b></th>
+                  <th *ngIf="showamount"><b>Quantity</b></th>
+                  <th *ngIf="showamount"><b>Amount</b></th>
 
                 </tr>
               </thead>
