--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget17/stats-widget17.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget17/stats-widget17.component.html
@@ -59,7 +59,7 @@
             <div class="row">
               <div class="col-12">
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">Mobile Number<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>Mobile Number</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input type="number" class="form-control" formControlName="phoneNumber"
                       (blur)="searchCorporateByPhone()" placeholder="Enter Mobile Number"
@@ -68,7 +68,7 @@
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">Khata Name<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>Khata Name</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="khataName" type="text" placeholder="Enter Khata Name"
                       formControlName="carrierName"
@@ -76,7 +76,7 @@
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">GST</label>
+                  <label class="col-md-3 col-form-label"><b>GST</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="GST" type="text" placeholder="Enter GST" formControlName="gstNo"
                       oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
@@ -84,14 +84,14 @@
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">Cr. Limit Amount<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>Cr. Limit Amount</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="creditLimitAmount" type="number"
                       placeholder="Enter Credit Limit Amount" formControlName="maxCreditAmount">
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">Cr. Limit Days<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>Cr. Limit Days</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="creditLimitDays" min="0" type="number"
                       placeholder="Enter Credit Limit Days" formControlName="creditDayLimit" (change)="disableError()">
@@ -101,6 +101,7 @@
               </div>
             </div>
 
+            <br><br>
             <button class="btn btn-primary" style="margin-left: 90%" (click)="nextStep()" awNextStep>Next</button>
           </form>
           <!-- </aw-wizard-step> -->
@@ -113,7 +114,7 @@
             <div class="row">
               <div class="col-12">
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">First name<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>First name</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="firstName" type="text" placeholder="Enter First name"
                       formControlName="firstName"
@@ -121,7 +122,7 @@
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label class="col-md-3 col-form-label">Last name<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>Last name</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="lastName" type="text" placeholder="Enter lastName"
                       formControlName="lastName"
@@ -129,7 +130,7 @@
                   </div>
                 </div>
                 <div *ngIf="!isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">Email</label>
+                  <label class="col-md-3 col-form-label"><b>Email</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="Email" type="text" placeholder="Enter Email"
                       formControlName="carrierEmail" placeholder="Enter Email Address">
@@ -141,7 +142,7 @@
                 </div>
 
                 <div *ngIf="!isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">Address Line 1</label>
+                  <label class="col-md-3 col-form-label"><b>Address Line 1</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="addressLine1" type="text" placeholder="Enter Address Line 1"
                       formControlName="address1"
@@ -150,7 +151,7 @@
                 </div>
 
                 <div *ngIf="!isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">Address Line 2</label>
+                  <label class="col-md-3 col-form-label"><b>Address Line 2</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="addressLine2" type="text" placeholder="Enter Address Line 2"
                       formControlName="address2"
@@ -160,14 +161,14 @@
 
 
                 <div *ngIf="!isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">City<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>City</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="city" type="text" placeholder="Enter City" formControlName="city"
                       oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
                   </div>
                 </div>
                 <div *ngIf="!isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">State<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>State</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input *ngIf="isCarrierFound" class="form-control" name="state" type="text"
                       placeholder="Enter State" formControlName="state">
@@ -217,7 +218,7 @@
 
 
                 <div *ngIf="isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">Email</label>
+                  <label class="col-md-3 col-form-label"><b>Email</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="Email" type="text" placeholder="Enter Email"
                       formControlName="carrierEmail" placeholder="Email Address">
@@ -226,7 +227,7 @@
                 </div>
 
                 <div *ngIf="isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">Address Line 1</label>
+                  <label class="col-md-3 col-form-label"><b>Address Line 1</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="addressLine1" type="text" placeholder="Enter Address Line 1"
                       formControlName="address1"
@@ -235,7 +236,7 @@
                 </div>
 
                 <div *ngIf="isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">Address Line 2</label>
+                  <label class="col-md-3 col-form-label"><b>Address Line 2</b></label>
                   <div class="col-md-9">
                     <input class="form-control" name="addressLine2" type="text" placeholder="Enter Address Line 2"
                       formControlName="address2"
@@ -245,14 +246,14 @@
 
 
                 <div *ngIf="isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">City<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>City</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input class="form-control" name="city" type="text" placeholder="Enter City" formControlName="city"
                       oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);">
                   </div>
                 </div>
                 <div *ngIf="isCarrierFound" class="row mb-3">
-                  <label class="col-md-3 col-form-label">State<span style="color: red;">*</span></label>
+                  <label class="col-md-3 col-form-label"><b>State</b><span style="color: red;">*</span></label>
                   <div class="col-md-9">
                     <input *ngIf="isCarrierFound" class="form-control" name="state" type="text"
                       placeholder="Enter State" formControlName="state">
@@ -262,11 +263,12 @@
               </div>
             </div>
 
+            <br><br>
             <div class="row mb-3">
               <div class="col-md-3">
                 <button class="btn btn-primary" (click)="prevStep()">Previous</button>
               </div>
-              <div style="margin-left: 90%" class="col-md-3">
+              <div style="margin-left: 66%" class="col-auto">
                 <span *ngIf="isCarrierFound">
                   <button class="btn btn-primary" (click)="submitNewCorp()">Next</button>
                 </span>
