--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget33/tables-widget33.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget33/tables-widget33.component.html
@@ -8,7 +8,8 @@
                     <form [formGroup]="searchDiscountForm">
 
                         <div class="row">
-                            <label for="example-text-input" class="col-auto col-form-label">Khata</label>
+                            <div class="col-md-1"></div>
+                            <label for="example-text-input" class="col-auto col-form-label"><b>Khata</b></label>
                             <div class="col-md-3">
                                 <input class="form-control" type="text" list="allCorporateList" placeholder="Khata"
                                     formControlName="customerName" (change)="getDetailsByCustomerName($event)">
@@ -16,7 +17,7 @@
                                     <option *ngFor="let data of allCorporateList" [value]="data.companyName">
                                 </datalist>
                             </div>
-                            <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+                            <label for="example-text-input" class="col-auto col-form-label"><b>>Date Range </b></label>
                             <div class="col-md-2">
                                 <input class="form-control" placeholder="DD-MM-YYYY" readonly
                                     style="background-color: #ffffff;" name="startDate" ngbTooltip="Start Date"
@@ -104,11 +105,11 @@
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th>Cr. Cycle Starts</th>
-                            <th>Cr. Cycle Ends</th>
-                            <th>Total Purchase</th>
-                            <th>Total Payment</th>
-                            <th>View Statement</th>
+                            <th><b>Cr. Cycle Starts</b></th>
+                            <th><b>Cr. Cycle Ends</b></th>
+                            <th><b>Total Purchase</b></th>
+                            <th><b>Total Payment</b></th>
+                            <th><b>View Statement</b></th>
 
                         </tr>
                     </thead>
@@ -163,7 +164,8 @@
         <form [formGroup]="searchDiscountForm">
 
             <div class="row">
-                <label for="example-text-input" class="col-auto col-form-label">Khata</label>
+                <div class="col-sm-1"></div>
+                <label for="example-text-input" class="col-auto col-form-label"><b>Khata</b></label>
                 <div class="col-md-3">
                     <input class="form-control" type="text" list="allCorporateList" placeholder="Khata"
                         formControlName="customerName" (change)="getDetailsByCustomerName($event)">
@@ -171,7 +173,7 @@
                         <option *ngFor="let data of allCorporateList" [value]="data.companyName">
                     </datalist>
                 </div>
-                <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+                <label for="example-text-input" class="col-auto col-form-label"><b>Date Range </b></label>
                 <div class="col-md-2">
                     <input class="form-control" placeholder="DD-MM-YYYY" readonly style="background-color: #ffffff;"
                         name="startDate" ngbTooltip="Start Date" (click)="startDate.toggle()" ngbDatepicker
@@ -247,11 +249,11 @@
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th>Cr. Cycle Starts</th>
-                            <th>Cr. Cycle Ends</th>
-                            <th>Total Purchase</th>
-                            <th>Total Payment</th>
-                            <th>View Statement</th>
+                            <th><b>Cr. Cycle Starts</b></th>
+                            <th><b>Cr. Cycle Ends</b></th>
+                            <th><b>Total Purchase</b></th>
+                            <th><b>Total Payment</b></th>
+                            <th><b>View Statement</b></th>
 
                         </tr>
                     </thead>
